adicionado mais exemplos